--- a/client/src/components/Wizard2/Wizard2.css
+++ b/client/src/components/Wizard2/Wizard2.css
@@ -10,6 +10,9 @@
     height: 100vh;
     background-color: white;
     text-align: center;
+    position: absolute;
+    top: 75px;
+    left: calc(50% - 400px);
 }
 
 .steps {
