--- a/client/src/components/Wizard3/Wizard3.css
+++ b/client/src/components/Wizard3/Wizard3.css
@@ -42,7 +42,7 @@
     background-color: #3B5249;
     font-size: large;
     border: none;
-    margin-top: 50px;
+    margin: 50px 10px;
 }
 
 .cancel {
@@ -66,4 +66,18 @@
     padding: 0px 125px 0px;
     font-size: large;
     text-align: left;
+}
+
+.imageWrapper {
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.imageWrapper image {
+    height: 300px;
+    width: 500px;
+
+    border: 1px solid black;
 }
