--- a/client/src/components/Wizard2/Wizard2.css
+++ b/client/src/components/Wizard2/Wizard2.css
@@ -67,3 +67,30 @@
     font-size: large;
     text-align: left;
 }
+
+input.cityStateInput, #zipInput {
+    width: 125px !important;
+}
+
+#city {
+    display: inline-block;
+}
+
+.cityState {
+    text-align: left;
+    padding-left: 100px;
+
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+
+#city p, #state p {
+    margin-left: 0px;
+    padding-left: 25px;
+}
+
+#zipInput {
+    position: absolute;
+    left: 100px;
+}
